--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
     "grapheme-splitter": "^1.0.4",
     "hamburger-react": "^2.4.1",
     "react": "^17.0.2",
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.8.6",
+    "netlify-cli": "^6.8.6",
     "postcss": "^7.0.36",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7"
   }
